2003-02-24  Jonathan Larmour  <jifl@eCosCentric.com>

	* cdl/time.cdl: Fix doc link.

2003-01-28  Jonathan Larmour  <jifl@eCosCentric.com>

	* cdl/time.cdl: Correct reference to
	CYGSEM_LIBC_TIME_POSIX_TIME_ROUTINES in CYGPKG_LIBC_TIME_TESTS to
	CYGFUN_LIBC_TIME_POSIX.

2003-01-27  Gary Thomas  <gary@mlbassoc.com>

	* tests/strptime.c: 
	* src/strptime.cxx: 
	* include/time.h: 
	* cdl/time.cdl: Add support for strptime().

2002-05-14  Jesper Skov  <jskov@redhat.com>

	* cdl/time.cdl: Added -Wno-format to the compiler flags. This is
	to avoid warnings about Y2K problems with the format specifiers
	used in the strftime test.

2002-01-09  Nick Garnett  <nickg@redhat.com>

	* tests/clock.c (cyg_start): Added CYG_TEST_INIT() to
	NOTAPPLICABLE version of cyg_start() so that the breakpoints are
	correctly sequenced in the testfarm and it does not think that
	this is a failure.

2001-06-22  Jesper Skov  <jskov@redhat.com>

	* cdl/time.cdl (CYGFUN_LIBC_TIME_SUS_EXTNS): Added.
	* src/strftime.cxx (do_format): Added some Single UNIX
	extensions.

2001-04-25  Bart Veer  <bartv@redhat.com>

	* tests/time.c (MAX_TIMEOUT):
	Increase timeout to cope with fast architectures such as the
	synthetic target.

2001-04-17  Bart Veer  <bartv@redhat.com>

	* tests/clock.c:
	Cope with synthetic target reorg

2000-11-29  Jonathan Larmour  <jlarmour@redhat.com>

	* tests/clock.c: Some targets are quite inconsistent, so skip
	6 samples now, and increase the tolerance to 40%.
	Also NA if tracing enabled.
	Also output the mean and maximum error reached, even when passing.

2000-11-27  Jesper Skov  <jskov@redhat.com>

	* tests/clock.c: Skip fourth sample too.

2000-11-14  Jesper Skov  <jskov@redhat.com>

	* tests/clock.c: Skip first three samples.

2000-10-30  Jonathan Larmour  <jlarmour@redhat.com>

	* include/time.inl: Ensure POSIX *_r functions can be accessed by
	non-POSIX implementation even when CYGFUN_LIBC_TIME_POSIX is off.
