@@ -1,3 +1,8 @@
+2003-03-18  Gary Thomas  <gary@mlbassoc.com>
+
+	* src/strptime.cxx: Initialize time structure to a well known, valid,
+	time/date so even if there is an error, it still makes [some] sense.
+
 2003-02-24  Jonathan Larmour  <jifl@eCosCentric.com>
 
 	* cdl/time.cdl: Fix doc link.
